--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h1 class="subtitle">4.EA 4.EB</h1>
             <h1 class="title">Breaking Bad</h1>  
             <h1 class="subtitle">332 dní do maturáku!</h1>
-            <h6>v22</h6>
+            <h6>v23</h6>
         </div>  
         <div class="shape">
             <svg viewBox="0 0 1500 200">
@@ -161,142 +161,142 @@
                       <tr>
                         <td>Daniel Tousek</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>David Hrubeš</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>David Maxmilian</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>František Rozboud</td>
                         <td>🤖</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Ivan Klimenda</td>
                         <td>☕️</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jakub Bláha</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jakub Lexa</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jakub Řebík</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jan Konzal</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jan Tománek</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Lukáš Fišer</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Martin Pavlík</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Martin Poláček</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Matouš Fousek</td>
                         <td>🚀</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Maxmilián Černý</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Ondřej Lounek</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Ondřej Rychlý</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Ondřej Zikmund</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Pavel Novotný</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Petr Baier</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Stanislav Pouzar</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Tereza Hejlová</td>
                         <td>👩🏿‍🦯</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>??Tipple Same??</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Tomáš Mácha</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Tomáš Siuda</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Vít Pavlíček</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Vojtěch Kodat</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Vojtěch Čížek</td>
                         <td>🤥</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                     </tbody>
                   </table>
@@ -309,134 +309,134 @@
                       <tr>
                         <th scope="col">Jméno</th>
                         <th scope="col">Smajlík</th>
-                        <th scope="col">Instagram</th>
+                        <th scope="col">Extra</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
                         <td>Aleš Hrádek</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Bohumil Snopek</td>
                         <td>🤑</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Daniel Barcal</td>
                         <td>🤘🏻</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Filip Svatý</td>
                         <td>🐷</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Honza Čada</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jakub Chromý</td>
                         <td>✌️</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jakub Kočárek</td>
                         <td>🥸</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jan Navrátil</td>
                         <td>🧃</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jaroslav Bartoš</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Jiří Kundrát</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Libor Pytel</td>
                         <td>🗿</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Matyáš Kroupa</td>
                         <td>🦧</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Matyáš Machala</td>
                         <td>🍃</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Ondřej Štěch</td>
                         <td>🤘</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Ondřej Houšť</td>
                         <td>⛷️</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Ondřej Kříž</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Petr Hanzal</td>
                         <td>⚡</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Sebastian Máška</td>
                         <td>🍑</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Tobiáš Dvořák</td>
                         <td>🏐</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Tomáš Cimpa</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Tomáš Zikmund</td>
                         <td>🙋🏻‍♂️</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Tomáš Tůma</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Václav Pravda</td>
                         <td>🔮</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Vojtěch Drachovský</td>
                         <td>‎ </td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                       <tr>
                         <td>Vojtěch Škopek</td>
                         <td>🕳️</td>
-                        <td>@john</td>
+                        <td>....</td>
                       </tr>
                     </tbody>
                   </table>
