--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Page Header -->
     <header class="header">
         
-            <video autoplay muted loop id="myVideo">
+            <video autoplay muted loop playsinline  id="myVideo">
             <source src="assets/imgs/1.mp4" type="video/mp4">
         </video>
     
@@ -84,6 +84,7 @@
             <h1 class="subtitle">4.EA 4.EB</h1>
             <h1 class="title">Breaking Bad</h1>  
             <h1 class="subtitle">332 dní do maturáku!</h1>
+            <h6>v25</h6>
         </div>  
         <div class="shape">
             <svg viewBox="0 0 1500 200">
