--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
             <div class="container">
                 <table class="table text-center">
                     <thead>
+                        <tr>
+                            <td>Škola</td>
+                            <td>SPŠSE</td>
+                          </tr>
                       <tr>
                         <td>Kdy</td>
                         <td>07.03.2024</td>
@@ -144,6 +148,10 @@
                       <tr>
                         <td>Cena</td>
                         <td>250Kč</td>
+                      </tr>
+                      <tr>
+                        <td>Náš instagram</td>
+                        <td><a href="https://www.instagram.com/elektrikari.z.dukly/" target="_blank">elektrikari.z.dukly</a></td>
                       </tr>
                     </tbody>
                   </table>
