--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with LeadMark landing page.">
+    <meta name="description" content="SPSSECB Maturiní ples">
     <meta name="author" content="Devcrud">
     <title>Maturitní Ples</title>
     <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.png">
