--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + LeadMark main styles -->
 	<link rel="stylesheet" href="assets/css/leadmark.css">
+
+
+    
 </head>
 <script>
     function loadDate(){
@@ -148,7 +151,7 @@ window.addEventListener("load", init);
                       </tr>
                       <tr>
                         <td class="info_l">Cena</td>
-                        <td>250Kč</td>
+                        <td>200 Kč</td>
                       </tr>
                       <tr>
                         <td class="info_l">Instagram</td>
@@ -175,153 +178,153 @@ window.addEventListener("load", init);
         <h6 class="section-title text-center">Maturanti</h6>    
         <br>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6 names">
                 <h6>4.EA</h6>
                 <table class="table">
                     <thead>
-                      <tr>
+                      <tr class="names_ef">
                         <th scope="col"></th>
                         <th scope="col">Jméno</th>
                         <th scope="col">Extra</th>
                       </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🎤</td>
                             <td>Baier Petr</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Bláha Jakub</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🍆</td>
                             <td>Černý Maxmilián</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤥</td>
                             <td>Čížek Vojtěch</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤓</td>
                             <td>Fišer Lukáš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🚀</td>
                             <td>Fousek Matouš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">👩🏿‍🦯</td>
                             <td>Hejlová Tereza</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Hrubeš David</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🏋️</td>
                             <td>Klimenda Ivan</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">👨🏼‍💻</td>
                             <td>Kodat Vojtěch</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Konzal Jan</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🫡</td>
                             <td>Luxa Jakub</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Lounek Ondřej</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">👺</td>
                             <td>Mácha Tomáš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Maxmilian David Valeš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🥽</td>
                             <td>Novotný Pavel</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🔴</td>
                             <td>Pavlíček Vít</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🦎</td>
                             <td>Pavlík Martin</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🚲</td>
                             <td>Poláček Martin</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">📜</td>
                             <td>Pouzar Stanislav</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤖</td>
                             <td>Rozboud František </td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Rychlý Ondřej</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🛹</td>
                             <td>Řebík Jakub</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤭</td>
                             <td>Siuda Tomáš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🔫</td>
                             <td>Tippl Sam</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Tománek Jan</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🗾</td>
                             <td>Tousek Daniel</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🚽</td>
                             <td>Zikmund Ondřej</td>
                             <td>....</td>
@@ -330,138 +333,138 @@ window.addEventListener("load", init);
                   </table>
             </div>
             <br>
-            <div class="col-sm-6">
+            <div class="col-sm-6 names">
                 <h6>4.EB</h6>
                 <table class="table">
                     <thead>
-                      <tr>
+                      <tr class="names_ef">
                         <th scope="col"></th>
                         <th scope="col">Jméno</th>
                         <th scope="col">Extra</th>
                       </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤘🏻</td>
                             <td>Barcal Daniel</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🐒</td>
                             <td>Bartoš Jaroslav</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🚂</td>
                             <td>Cimpa Tomáš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🙉</td>
                             <td>Čada Honza</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🇯🇲</td>
                             <td>Drachovský Vojtěch</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🏐</td>
                             <td>Dvořák Tobiáš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">⚡</td>
                             <td>Hanzal Petr</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">⛷️</td>
                             <td>Houšť Ondřej</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Hrádek Aleš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">✌️</td>
                             <td>Chromý Jakub</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🥸</td>
                             <td>Kočárek Jakub</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🦧</td>
                             <td>Kroupa Matyáš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">❌</td>
                             <td>Kříž Ondřej</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🌚</td>
                             <td>Kundrát Jiří</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🍃</td>
                             <td>Machala Matyáš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🍑</td>
                             <td>Máška Sebastian</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🧃</td>
                             <td>Navrátil Jan</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🔮</td>
                             <td>Pravda Václav</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🗿</td>
                             <td>Pytel Libor</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤑</td>
                             <td>Snopek Bohumil</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🐷</td>
                             <td>Svatý Filip</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef legenda">
                             <td class="emoji">🕳️</td>
                             <td>Škopek Vojtěch</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤘</td>
                             <td>Štěch Ondřej</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🤡</td>
                             <td>Tůma Tomáš</td>
                             <td>....</td>
                         </tr>
-                        <tr>
+                        <tr class="names_ef">
                             <td class="emoji">🙋🏻‍♂️</td>
                             <td>Zikmund Tomáš</td>
                             <td>....</td>
